bug 903484 - dont close spdy sessions with preferred entry if they can't actually coalesce yet r=hurley